--- a/Zirpl.AppEngine.Testing/Zirpl.Common.Testing.csproj
+++ b/Zirpl.AppEngine.Testing/Zirpl.Common.Testing.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{E0DF6DA8-8BB5-4DE4-B5E3-B9C2BB00B119}</ProjectGuid>
+    <ProjectGuid>{366C5119-60F8-4C0B-9D03-FD423BD5B6C5}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Zirpl.AppEngine.Tests</RootNamespace>
-    <AssemblyName>Zirpl.AppEngine.Tests</AssemblyName>
+    <RootNamespace>Zirpl.Testing</RootNamespace>
+    <AssemblyName>Zirpl.Common.Testing</AssemblyName>
     <TargetFrameworkVersion>v4.5.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <TargetFrameworkProfile />
@@ -33,10 +33,12 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="FluentAssertions">
+    <Reference Include="FluentAssertions, Version=3.0.107.0, Culture=neutral, PublicKeyToken=33f2691a05b67b6a, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
       <HintPath>..\packages\FluentAssertions.3.0.107\lib\net45\FluentAssertions.dll</HintPath>
     </Reference>
-    <Reference Include="FluentAssertions.Core">
+    <Reference Include="FluentAssertions.Core, Version=3.0.107.0, Culture=neutral, PublicKeyToken=33f2691a05b67b6a, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
       <HintPath>..\packages\FluentAssertions.3.0.107\lib\net45\FluentAssertions.Core.dll</HintPath>
     </Reference>
     <Reference Include="nunit.framework, Version=2.6.3.13283, Culture=neutral, PublicKeyToken=96d09a1eb7f44a77, processorArchitecture=MSIL">
@@ -50,26 +52,16 @@
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
-    <Reference Include="Telerik.JustMock">
+    <Reference Include="Telerik.JustMock, Version=2014.2.609.3, Culture=neutral, PublicKeyToken=721b6c5bc0326b3a, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
       <HintPath>..\packages\JustMock.2014.2.609.3\lib\Net35\Telerik.JustMock.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Model\RangeTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Service\AbstractedSupportsImplServiceTests.cs" />
-    <Compile Include="Validation\ValidationUtilitiesTests.cs" />
-  </ItemGroup>
-  <ItemGroup />
-  <ItemGroup>
-    <ProjectReference Include="..\Zirpl.AppEngine.Testing\Zirpl.Common.Testing.csproj">
-      <Project>{366c5119-60f8-4c0b-9d03-fd423bd5b6c5}</Project>
-      <Name>Zirpl.Common.Testing</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Zirpl.AppEngine\Zirpl.AppEngine.csproj">
-      <Project>{dd9bcb12-748c-4395-9a8e-a599a60a0caa}</Project>
-      <Name>Zirpl.AppEngine</Name>
-    </ProjectReference>
+    <Compile Include="AssertionUtilities.cs" />
+    <Compile Include="Properties\AssemblyInfo_common.cs" />
+    <Compile Include="UnitTestUtilities.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
