--- a/Zirpl.AppEngine.CodeGeneration.VS2013/Zirpl.AppEngine.CodeGeneration.VS2013.csproj
+++ b/Zirpl.AppEngine.CodeGeneration.VS2013/Zirpl.AppEngine.CodeGeneration.VS2013.csproj
@@ -72,10 +72,6 @@
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
-    <Reference Include="Zirpl.Common, Version=1.0.12.0, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\ZTinySolutions\Zirpl.Spotify\packages\Zirpl.Common.1.0.12\lib\net451\Zirpl.Common.dll</HintPath>
-    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AppGenerator.cs" />
@@ -121,12 +117,8 @@
     </Compile>
     <Compile Include="Transformation\TextBlock.cs" />
     <Compile Include="Transformation\OutputFileBuildActionType.cs" />
-    <Compile Include="Transformation\DynamicHost.cs" />
-    <Compile Include="Transformation\DynamicTextTransformation.cs" />
-    <Compile Include="Transformation\IDynamicHost.cs" />
     <Compile Include="Transformation\OutputFile.cs" />
     <Compile Include="Transformation\TemplateFileManager.cs" />
-    <Compile Include="Transformation\NullHost.cs" />
     <Compile Include="Transformation\VisualStudioExtensions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Transformation\LogHelper.cs" />
@@ -135,7 +127,6 @@
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="packages.config" />
     <None Include="Templates\ModelMetadataTemplate.tt">
       <Generator>TextTemplatingFilePreprocessor</Generator>
       <LastGenOutput>ModelMetadataTemplate.cs</LastGenOutput>
@@ -148,6 +139,12 @@
       <Generator>TextTemplatingFilePreprocessor</Generator>
       <LastGenOutput>ModelEnumTemplate.cs</LastGenOutput>
     </None>
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Zirpl.Common\Zirpl.Common.csproj">
+      <Project>{0402a91f-2a69-447c-bb2b-64d5af155105}</Project>
+      <Name>Zirpl.Common</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
