--- a/Zirpl.AppEngine.CodeGeneration.VS2013/Zirpl.AppEngine.CodeGeneration.VS2013.csproj
+++ b/Zirpl.AppEngine.CodeGeneration.VS2013/Zirpl.AppEngine.CodeGeneration.VS2013.csproj
@@ -75,76 +75,112 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AppGenerator.cs" />
-    <Compile Include="TemplateHelper.cs" />
-    <Compile Include="CodeGenerationHelper.cs" />
-    <Compile Include="ConfigModel\XmlModelBase.cs" />
-    <Compile Include="Transformation\IPreprocessedTextTransformation.cs" />
-    <Compile Include="Templates\ModelMetadataTemplate.cs">
-      <DependentUpon>ModelMetadataTemplate.tt</DependentUpon>
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-    </Compile>
-    <Compile Include="Templates\ModelTemplate.cs">
-      <DependentUpon>ModelTemplate.tt</DependentUpon>
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-    </Compile>
-    <Compile Include="Templates\Templates_partial.cs" />
-    <Compile Include="Transformation\ITextTransformationWrapper.cs" />
-    <Compile Include="Transformation\PreprocessedTextTransformationWrapper.cs" />
-    <Compile Include="Transformation\TextTransformationWrapper.cs" />
-    <Compile Include="Transformation\TextTransformationWrapperFactory.cs" />
-    <Compile Include="TypeProvider.cs" />
-    <Compile Include="ConfigModel\AppDefinition.cs" />
-    <Compile Include="ConfigModel\DataServiceOptions.cs" />
-    <Compile Include="ConfigModel\DomainType.cs" />
-    <Compile Include="ConfigModel\Property.cs" />
-    <Compile Include="ConfigModel\Entry.cs" />
-    <Compile Include="ConfigModel\ModelOptions.cs" />
-    <Compile Include="ConfigModel\ServiceOptions.cs" />
-    <Compile Include="ConfigModel\WebOptions.cs" />
-    <Compile Include="DomainTypeFilters.cs" />
-    <Compile Include="Templates\ModelEnumTemplate.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>ModelEnumTemplate.tt</DependentUpon>
-    </Compile>
-    <Compile Include="NamingProvider.cs" />
-    <Compile Include="ProjectProvider.cs" />
-    <Compile Include="Transformation\OutputFileProperties.cs" />
-    <Compile Include="Transformation\ParamTextTemplate.cs">
+    <Compile Include="TextTemplating\IPreprocessedTextTransformation.cs" />
+    <Compile Include="TextTemplating\ITextTransformation.cs" />
+    <Compile Include="TextTemplating\old\PreprocessedTextTransformationWrapper.cs" />
+    <Compile Include="TextTemplating\TextTransformationWrapper.cs" />
+    <Compile Include="TextTemplating\old\TextTransformationWrapperFactory.cs" />
+    <Compile Include="TextTemplating\TransformationHelperBase.cs" />
+    <Compile Include="TextTemplating\OutputFileProperties.cs" />
+    <Compile Include="TextTemplating\old\ParamTextTemplate.cs">
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="Transformation\TextBlock.cs" />
-    <Compile Include="Transformation\OutputFileBuildActionType.cs" />
-    <Compile Include="Transformation\OutputFile.cs" />
-    <Compile Include="Transformation\TemplateFileManager.cs" />
-    <Compile Include="Transformation\VisualStudioExtensions.cs" />
+    <Compile Include="TextTemplating\TextBlock.cs" />
+    <Compile Include="TextTemplating\OutputFileBuildActionType.cs" />
+    <Compile Include="TextTemplating\OutputFile.cs" />
+    <Compile Include="TextTemplating\TemplateFileManager.cs" />
+    <Compile Include="TextTemplating\VisualStudioExtensions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Transformation\LogHelper.cs" />
+    <Compile Include="TextTemplating\LogHelper.cs" />
+    <Compile Include="V1\CodeGenerationHelper.cs">
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Include="V1\ConfigModel\AppDefinition.cs">
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Include="V1\ConfigModel\DataServiceOptions.cs">
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Include="V1\ConfigModel\DomainType.cs">
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Include="V1\ConfigModel\Entry.cs">
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Include="V1\ConfigModel\ModelOptions.cs">
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Include="V1\ConfigModel\Property.cs">
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Include="V1\ConfigModel\ServiceOptions.cs">
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Include="V1\ConfigModel\WebOptions.cs">
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Include="V1\ConfigModel\XmlModelBase.cs">
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Include="V1\DomainTypeFilters.cs">
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Include="V1\NamingProvider.cs">
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Include="V1\ProjectProvider.cs">
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Include="V1\Templates\ModelEnumTemplate.cs">
+      <DependentUpon>ModelEnumTemplate.tt</DependentUpon>
+      <SubType>Code</SubType>
+      <DesignTime>True</DesignTime>
+      <AutoGen>True</AutoGen>
+    </Compile>
+    <Compile Include="V1\Templates\ModelMetadataTemplate.cs">
+      <DependentUpon>ModelMetadataTemplate.tt</DependentUpon>
+      <SubType>Code</SubType>
+      <DesignTime>True</DesignTime>
+      <AutoGen>True</AutoGen>
+    </Compile>
+    <Compile Include="V1\Templates\ModelTemplate.cs">
+      <DependentUpon>ModelTemplate.tt</DependentUpon>
+      <SubType>Code</SubType>
+      <DesignTime>True</DesignTime>
+      <AutoGen>True</AutoGen>
+    </Compile>
+    <Compile Include="V1\Templates\Templates_partial.cs">
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Include="V1\TypeProvider.cs">
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Include="V1\TransformationHelper.cs">
+      <SubType>Code</SubType>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Templates\ModelMetadataTemplate.tt">
-      <Generator>TextTemplatingFilePreprocessor</Generator>
-      <LastGenOutput>ModelMetadataTemplate.cs</LastGenOutput>
-    </None>
-    <None Include="Templates\ModelTemplate.tt">
-      <Generator>TextTemplatingFilePreprocessor</Generator>
-      <LastGenOutput>ModelTemplate.cs</LastGenOutput>
-    </None>
-    <None Include="Templates\ModelEnumTemplate.tt">
-      <Generator>TextTemplatingFilePreprocessor</Generator>
-      <LastGenOutput>ModelEnumTemplate.cs</LastGenOutput>
-    </None>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Zirpl.Common\Zirpl.Common.csproj">
       <Project>{0402a91f-2a69-447c-bb2b-64d5af155105}</Project>
       <Name>Zirpl.Common</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="V1\Templates\ModelEnumTemplate.tt">
+      <Generator>TextTemplatingFilePreprocessor</Generator>
+      <LastGenOutput>ModelEnumTemplate.cs</LastGenOutput>
+    </None>
+    <None Include="V1\Templates\ModelMetadataTemplate.tt">
+      <Generator>TextTemplatingFilePreprocessor</Generator>
+      <LastGenOutput>ModelMetadataTemplate.cs</LastGenOutput>
+    </None>
+    <None Include="V1\Templates\ModelTemplate.tt">
+      <Generator>TextTemplatingFilePreprocessor</Generator>
+      <LastGenOutput>ModelTemplate.cs</LastGenOutput>
+    </None>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
