--- a/Zirpl.AppEngine.CodeGeneration.VS2013/Zirpl.AppEngine.CodeGeneration.VS2013.csproj
+++ b/Zirpl.AppEngine.CodeGeneration.VS2013/Zirpl.AppEngine.CodeGeneration.VS2013.csproj
@@ -77,14 +77,9 @@
     <Compile Include="AppGenerator.cs" />
     <Compile Include="TextTemplating\IPreprocessedTextTransformation.cs" />
     <Compile Include="TextTemplating\ITextTransformation.cs" />
-    <Compile Include="TextTemplating\old\PreprocessedTextTransformationWrapper.cs" />
     <Compile Include="TextTemplating\TextTransformationWrapper.cs" />
-    <Compile Include="TextTemplating\old\TextTransformationWrapperFactory.cs" />
     <Compile Include="TextTemplating\TransformationHelperBase.cs" />
     <Compile Include="TextTemplating\OutputFileProperties.cs" />
-    <Compile Include="TextTemplating\old\ParamTextTemplate.cs">
-      <SubType>Code</SubType>
-    </Compile>
     <Compile Include="TextTemplating\TextBlock.cs" />
     <Compile Include="TextTemplating\OutputFileBuildActionType.cs" />
     <Compile Include="TextTemplating\OutputFile.cs" />
@@ -92,7 +87,7 @@
     <Compile Include="TextTemplating\VisualStudioExtensions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TextTemplating\LogHelper.cs" />
-    <Compile Include="V1\CodeGenerationHelper.cs">
+    <Compile Include="V1\CodeHelper.cs">
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="V1\ConfigModel\AppDefinition.cs">
@@ -125,9 +120,7 @@
     <Compile Include="V1\DomainTypeFilters.cs">
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="V1\NamingProvider.cs">
-      <SubType>Code</SubType>
-    </Compile>
+    <Compile Include="V1\FileHelper.cs" />
     <Compile Include="V1\ProjectProvider.cs">
       <SubType>Code</SubType>
     </Compile>
@@ -150,9 +143,6 @@
       <AutoGen>True</AutoGen>
     </Compile>
     <Compile Include="V1\Templates\Templates_partial.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="V1\TypeProvider.cs">
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="V1\TransformationHelper.cs">
