combined multiple files into 1 and simplified calls to code generation helper methods

--- a/Zirpl.Examples.CodeGeneration.VS2013.Commerce.DataService/Zirpl.Examples.CodeGeneration.VS2013.Commerce.DataService.csproj
+++ b/Zirpl.Examples.CodeGeneration.VS2013.Commerce.DataService/Zirpl.Examples.CodeGeneration.VS2013.Commerce.DataService.csproj
@@ -570,6 +570,7 @@
       <Name>Zirpl.Examples.CodeGeneration.VS2013.Commerce.Model</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
