--- a/Zirpl.Examples.CodeGeneration.VS2013.Commerce.Model/Zirpl.Examples.CodeGeneration.VS2013.Commerce.Model.csproj
+++ b/Zirpl.Examples.CodeGeneration.VS2013.Commerce.Model/Zirpl.Examples.CodeGeneration.VS2013.Commerce.Model.csproj
@@ -421,6 +421,7 @@
       <Name>Zirpl.AppEngine</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <None Include="_auto\AppTransform.txt4" />
     <None Include="_auto\Catalog\AppTransform.txt4" />
