--- a/Zirpl.AppEngine.CodeGeneration.VS2013/Zirpl.AppEngine.CodeGeneration.VS2013.csproj
+++ b/Zirpl.AppEngine.CodeGeneration.VS2013/Zirpl.AppEngine.CodeGeneration.VS2013.csproj
@@ -88,9 +88,6 @@
     <Compile Include="TextTemplating\VisualStudioExtensions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TextTemplating\LogHelper.cs" />
-    <Compile Include="V1\CodeHelper.cs">
-      <SubType>Code</SubType>
-    </Compile>
     <Compile Include="V1\ConfigModel\AppDefinition.cs">
       <SubType>Code</SubType>
     </Compile>
@@ -116,13 +113,6 @@
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="V1\ConfigModel\XmlModelBase.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="V1\DomainTypeFilters.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="V1\FileHelper.cs" />
-    <Compile Include="V1\ProjectProvider.cs">
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="V1\Templates\DataContextTemplate.cs">
@@ -168,9 +158,7 @@
       <DesignTime>True</DesignTime>
       <AutoGen>True</AutoGen>
     </Compile>
-    <Compile Include="V1\TransformationHelper.cs">
-      <SubType>Code</SubType>
-    </Compile>
+    <Compile Include="V1\V1Helper.cs" />
   </ItemGroup>
   <ItemGroup>
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
