--- a/Zirpl.Examples.CodeGeneration.VS2013.Commerce.Model/Zirpl.Examples.CodeGeneration.VS2013.Commerce.Model.csproj
+++ b/Zirpl.Examples.CodeGeneration.VS2013.Commerce.Model/Zirpl.Examples.CodeGeneration.VS2013.Commerce.Model.csproj
@@ -42,6 +42,7 @@
   <ItemGroup>
     <Compile Include="Membership\User.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Subscriptions\SubscriptionInstance.cs" />
     <Compile Include="_auto\Address.auto.cs">
       <DependentUpon>AppTransform.txt4</DependentUpon>
     </Compile>
