--- a/.nuget/Zirpl.AppEngine.EntityFramework.nuspec
+++ b/.nuget/Zirpl.AppEngine.EntityFramework.nuspec
@@ -23,12 +23,14 @@
         <dependency id="EnterpriseLibrary.TransientFaultHandling" version="6.0.1304.0"  />
         <dependency id="EntityFramework" version="6.1.0"  />
         <dependency id="FluentValidation" version="5.3.0.0"  />
+        <dependency id="Zirpl.AppEngine" version="$version$"  />
         <dependency id="Zirpl.Common" version="$version$"  />
       </group>
       <group targetFramework="net45">
         <dependency id="EnterpriseLibrary.TransientFaultHandling" version="6.0.1304.0"  />
         <dependency id="EntityFramework" version="6.1.0"  />
         <dependency id="FluentValidation" version="5.3.0.0"  />
+        <dependency id="Zirpl.AppEngine" version="$version$"  />
         <dependency id="Zirpl.Common" version="$version$"  />
       </group>
     </dependencies>
