--- a/.nuget/Zirpl.AppEngine.nuspec
+++ b/.nuget/Zirpl.AppEngine.nuspec
@@ -27,6 +27,7 @@
         <dependency id="EnterpriseLibrary.TransientFaultHandling" version="6.0.1304.0"  />
         <dependency id="EnterpriseLibrary.TransientFaultHandling.Data" version="6.0.1304.1"  />
         <dependency id="log4net" version="1.2.10"  />
+        <dependency id="Zirpl.Common" version="$version$"  />
       </group>
       <group targetFramework="net45">
         <dependency id="Autofac" version="3.5.0"  />
@@ -36,6 +37,7 @@
         <dependency id="EnterpriseLibrary.TransientFaultHandling" version="6.0.1304.0"  />
         <dependency id="EnterpriseLibrary.TransientFaultHandling.Data" version="6.0.1304.1"  />
         <dependency id="log4net" version="1.2.10"  />
+        <dependency id="Zirpl.Common" version="$version$"  />
       </group>
       <group targetFramework="sl50">
         <dependency id="Autofac" version="3.5.0"  />
