--- a/Zirpl.AppEngine.Silverlight5/Zirpl.AppEngine.Silverlight5.csproj
+++ b/Zirpl.AppEngine.Silverlight5/Zirpl.AppEngine.Silverlight5.csproj
@@ -57,6 +57,9 @@
     <Reference Include="AutoMapper.SL5">
       <HintPath>..\packages\AutoMapper.3.2.1\lib\sl5\AutoMapper.SL5.dll</HintPath>
     </Reference>
+    <Reference Include="FluentValidation">
+      <HintPath>..\packages\FluentValidation.5.3.0.0\lib\portable-win+net40+sl50+wp80\FluentValidation.dll</HintPath>
+    </Reference>
     <Reference Include="mscorlib" />
     <Reference Include="System.ComponentModel.DataAnnotations, Version=5.0.5.0, Culture=neutral, PublicKeyToken=ddd0da4d3e678217, processorArchitecture=MSIL" />
     <Reference Include="System.Windows" />
@@ -453,6 +456,12 @@
     <Compile Include="..\Zirpl.AppEngine\Validation\EntityValidationError.cs">
       <Link>Validation\EntityValidationError.cs</Link>
     </Compile>
+    <Compile Include="..\Zirpl.AppEngine\Validation\FluentValidation\AbstractValidatorExtensions.cs">
+      <Link>Validation\FluentValidation\AbstractValidatorExtensions.cs</Link>
+    </Compile>
+    <Compile Include="..\Zirpl.AppEngine\Validation\FluentValidation\RuleBuilderExtensions.cs">
+      <Link>Validation\FluentValidation\RuleBuilderExtensions.cs</Link>
+    </Compile>
     <Compile Include="..\Zirpl.AppEngine\Validation\IValidationHelper.cs">
       <Link>Validation\IValidationHelper.cs</Link>
     </Compile>
@@ -476,7 +485,12 @@
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <ProjectReference Include="..\Zirpl.Common.Silverlight5\Zirpl.Common.Silverlight5.csproj">
+      <Project>{7f18b53c-542a-4499-91d9-c2b8e56648dd}</Project>
+      <Name>Zirpl.Common.Silverlight5</Name>
+    </ProjectReference>
+  </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
@@ -486,7 +500,7 @@
       <FlavorProperties GUID="{A1591282-1198-4647-A2B1-27E5FF5F6F3B}">
         <SilverlightProjectProperties />
       </FlavorProperties>
-      <UserProperties ProjectLinkerExcludeFilter="\\?desktop(\\.*)?$;\\?silverlight(\\.*)?$;\.desktop;\.silverlight;\.xaml;^service references(\\.*)?$;\.clientconfig;^web references(\\.*)?$" ProjectLinkReference="dd9bcb12-748c-4395-9a8e-a599a60a0caa" />
+      <UserProperties ProjectLinkReference="dd9bcb12-748c-4395-9a8e-a599a60a0caa" ProjectLinkerExcludeFilter="\\?desktop(\\.*)?$;\\?silverlight(\\.*)?$;\.desktop;\.silverlight;\.xaml;^service references(\\.*)?$;\.clientconfig;^web references(\\.*)?$" />
     </VisualStudio>
   </ProjectExtensions>
   <Import Project="..\packages\AutoMapper.3.2.1\tools\AutoMapper.targets" Condition="Exists('..\packages\AutoMapper.3.2.1\tools\AutoMapper.targets')" />
