--- a/Zirpl.AppEngine.Silverlight5/packages.config
+++ b/Zirpl.AppEngine.Silverlight5/packages.config
@@ -2,4 +2,5 @@
 <packages>
   <package id="Autofac" version="3.5.0" targetFramework="sl50" />
   <package id="AutoMapper" version="3.2.1" targetFramework="sl50" />
+  <package id="FluentValidation" version="5.3.0.0" targetFramework="sl50" />
 </packages>
