--- a/Zirpl.AppEngine/packages.config
+++ b/Zirpl.AppEngine/packages.config
@@ -6,5 +6,6 @@
   <package id="Common.Logging.Log4Net" version="2.0.1" targetFramework="net451" />
   <package id="EnterpriseLibrary.TransientFaultHandling" version="6.0.1304.0" targetFramework="net451" />
   <package id="EnterpriseLibrary.TransientFaultHandling.Data" version="6.0.1304.1" targetFramework="net451" />
+  <package id="FluentValidation" version="5.3.0.0" targetFramework="net451" />
   <package id="log4net" version="1.2.10" targetFramework="net451" />
 </packages>
