--- a/Zirpl.Examples.CodeGeneration.VS2013.Commerce.Service/Zirpl.Examples.CodeGeneration.VS2013.Commerce.Service.csproj
+++ b/Zirpl.Examples.CodeGeneration.VS2013.Commerce.Service/Zirpl.Examples.CodeGeneration.VS2013.Commerce.Service.csproj
@@ -39,6 +39,10 @@
     <Reference Include="EntityFramework.SqlServer">
       <HintPath>..\packages\EntityFramework.6.1.1\lib\net45\EntityFramework.SqlServer.dll</HintPath>
     </Reference>
+    <Reference Include="FluentValidation, Version=5.3.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\packages\FluentValidation.5.3.0.0\lib\Net40\FluentValidation.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
@@ -374,9 +378,116 @@
     <Compile Include="_auto\TagService.auto.cs">
       <DependentUpon>AppTransform.txt4</DependentUpon>
     </Compile>
+    <Compile Include="_auto\Validation\AddressValidator.auto.cs">
+      <DependentUpon>AppTransform.txt4</DependentUpon>
+    </Compile>
+    <Compile Include="_auto\Validation\Catalog\BrandValidator.auto.cs">
+      <DependentUpon>AppTransform.txt4</DependentUpon>
+    </Compile>
+    <Compile Include="_auto\Validation\Catalog\CategoryValidator.auto.cs">
+      <DependentUpon>AppTransform.txt4</DependentUpon>
+    </Compile>
+    <Compile Include="_auto\Validation\Catalog\DisplayProductValidator.auto.cs">
+      <DependentUpon>AppTransform.txt4</DependentUpon>
+    </Compile>
+    <Compile Include="_auto\Validation\Catalog\ProductReviewValidator.auto.cs">
+      <DependentUpon>AppTransform.txt4</DependentUpon>
+    </Compile>
+    <Compile Include="_auto\Validation\Catalog\SubscriptionChoiceTierPriceCombinationValidator.auto.cs">
+      <DependentUpon>AppTransform.txt4</DependentUpon>
+    </Compile>
+    <Compile Include="_auto\Validation\Catalog\SubscriptionChoiceValidator.auto.cs">
+      <DependentUpon>AppTransform.txt4</DependentUpon>
+    </Compile>
+    <Compile Include="_auto\Validation\Catalog\TierPriceValidator.auto.cs">
+      <DependentUpon>AppTransform.txt4</DependentUpon>
+    </Compile>
+    <Compile Include="_auto\Validation\Catalog\TierShipmentValidator.auto.cs">
+      <DependentUpon>AppTransform.txt4</DependentUpon>
+    </Compile>
+    <Compile Include="_auto\Validation\Customers\CustomerChargeOptionValidator.auto.cs">
+      <DependentUpon>AppTransform.txt4</DependentUpon>
+    </Compile>
+    <Compile Include="_auto\Validation\Customers\CustomerReferralValidator.auto.cs">
+      <DependentUpon>AppTransform.txt4</DependentUpon>
+    </Compile>
+    <Compile Include="_auto\Validation\Customers\CustomerTagValidator.auto.cs">
+      <DependentUpon>AppTransform.txt4</DependentUpon>
+    </Compile>
+    <Compile Include="_auto\Validation\Customers\CustomerValidator.auto.cs">
+      <DependentUpon>AppTransform.txt4</DependentUpon>
+    </Compile>
+    <Compile Include="_auto\Validation\Membership\PasswordResetLinkValidator.auto.cs">
+      <DependentUpon>AppTransform.txt4</DependentUpon>
+    </Compile>
+    <Compile Include="_auto\Validation\Membership\VisitorValidator.auto.cs">
+      <DependentUpon>AppTransform.txt4</DependentUpon>
+    </Compile>
+    <Compile Include="_auto\Validation\Notifications\EmailEventValidator.auto.cs">
+      <DependentUpon>AppTransform.txt4</DependentUpon>
+    </Compile>
+    <Compile Include="_auto\Validation\Orders\ChargeValidator.auto.cs">
+      <DependentUpon>AppTransform.txt4</DependentUpon>
+    </Compile>
+    <Compile Include="_auto\Validation\Orders\DiscountUsageValidator.auto.cs">
+      <DependentUpon>AppTransform.txt4</DependentUpon>
+    </Compile>
+    <Compile Include="_auto\Validation\Orders\OrderValidator.auto.cs">
+      <DependentUpon>AppTransform.txt4</DependentUpon>
+    </Compile>
+    <Compile Include="_auto\Validation\Orders\ShoppingCartItemValidator.auto.cs">
+      <DependentUpon>AppTransform.txt4</DependentUpon>
+    </Compile>
+    <Compile Include="_auto\Validation\Orders\StripeChargeValidator.auto.cs">
+      <DependentUpon>AppTransform.txt4</DependentUpon>
+    </Compile>
+    <Compile Include="_auto\Validation\Orders\StripeCustomerChargeOptionValidator.auto.cs">
+      <DependentUpon>AppTransform.txt4</DependentUpon>
+    </Compile>
+    <Compile Include="_auto\Validation\Partners\PartnerReferralCouponRequestValidator.auto.cs">
+      <DependentUpon>AppTransform.txt4</DependentUpon>
+    </Compile>
+    <Compile Include="_auto\Validation\Partners\PartnerReferralPlanValidator.auto.cs">
+      <DependentUpon>AppTransform.txt4</DependentUpon>
+    </Compile>
+    <Compile Include="_auto\Validation\Partners\PartnerReferralValidator.auto.cs">
+      <DependentUpon>AppTransform.txt4</DependentUpon>
+    </Compile>
+    <Compile Include="_auto\Validation\Partners\PartnerValidator.auto.cs">
+      <DependentUpon>AppTransform.txt4</DependentUpon>
+    </Compile>
+    <Compile Include="_auto\Validation\Promotions\DiscountValidator.auto.cs">
+      <DependentUpon>AppTransform.txt4</DependentUpon>
+    </Compile>
+    <Compile Include="_auto\Validation\Promotions\PromoCodeValidator.auto.cs">
+      <DependentUpon>AppTransform.txt4</DependentUpon>
+    </Compile>
+    <Compile Include="_auto\Validation\Promotions\ReferralValidator.auto.cs">
+      <DependentUpon>AppTransform.txt4</DependentUpon>
+    </Compile>
+    <Compile Include="_auto\Validation\Settings\SystemSettingValidator.auto.cs">
+      <DependentUpon>AppTransform.txt4</DependentUpon>
+    </Compile>
+    <Compile Include="_auto\Validation\Settings\TaxRuleValidator.auto.cs">
+      <DependentUpon>AppTransform.txt4</DependentUpon>
+    </Compile>
+    <Compile Include="_auto\Validation\Subscriptions\PendingSubscriptionChangeValidator.auto.cs">
+      <DependentUpon>AppTransform.txt4</DependentUpon>
+    </Compile>
+    <Compile Include="_auto\Validation\Subscriptions\SubscriptionInstanceValidator.auto.cs">
+      <DependentUpon>AppTransform.txt4</DependentUpon>
+    </Compile>
+    <Compile Include="_auto\Validation\Subscriptions\SubscriptionPeriodValidator.auto.cs">
+      <DependentUpon>AppTransform.txt4</DependentUpon>
+    </Compile>
+    <Compile Include="_auto\Validation\Subscriptions\SubscriptionValidator.auto.cs">
+      <DependentUpon>AppTransform.txt4</DependentUpon>
+    </Compile>
+    <Compile Include="_auto\Validation\TagValidator.auto.cs">
+      <DependentUpon>AppTransform.txt4</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
-    <None Include="App.config" />
     <None Include="packages.config" />
     <None Include="_auto\AppTransform.txt4" />
     <None Include="_auto\Catalog\AppTransform.txt4" />
@@ -388,6 +499,16 @@
     <None Include="_auto\Promotions\AppTransform.txt4" />
     <None Include="_auto\Settings\AppTransform.txt4" />
     <None Include="_auto\Subscriptions\AppTransform.txt4" />
+    <None Include="_auto\Validation\AppTransform.txt4" />
+    <None Include="_auto\Validation\Catalog\AppTransform.txt4" />
+    <None Include="_auto\Validation\Customers\AppTransform.txt4" />
+    <None Include="_auto\Validation\Membership\AppTransform.txt4" />
+    <None Include="_auto\Validation\Notifications\AppTransform.txt4" />
+    <None Include="_auto\Validation\Orders\AppTransform.txt4" />
+    <None Include="_auto\Validation\Partners\AppTransform.txt4" />
+    <None Include="_auto\Validation\Promotions\AppTransform.txt4" />
+    <None Include="_auto\Validation\Settings\AppTransform.txt4" />
+    <None Include="_auto\Validation\Subscriptions\AppTransform.txt4" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Zirpl.AppEngine.EntityFramework\Zirpl.AppEngine.EntityFramework.csproj">
@@ -407,6 +528,7 @@
       <Name>Zirpl.Examples.CodeGeneration.VS2013.Commerce.Model</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
